--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11344,7 +11344,7 @@
 	<item component="ComponentInfo{ru.filit.motiv.app/ru.filit.motiv.app.SplashScreen}" drawable="motiv" />
 	<item component="ComponentInfo{ru.fns.billchecker/ru.fns.billchecker.consumer.splash.SplashActivity}" drawable="fts_russia" />
 	<item component="ComponentInfo{ru.fns.lkfl/ru.fns.lkfl.MainActivity}" drawable="fts_russia" />
-	<item component="ComponentInfo{ru.foodfox.client/ru.foodfox.client.ui.activities.MainActivity}" drawable="yandex_eda" />
+	<item component="ComponentInfo{ru.foodfox.client/ru.foodfox.client.ui.activities.MainActivity}" drawable="yandex_eats" />
 	<item component="ComponentInfo{ru.forpdateam.forpda/forpdateam.ru.forpda.ui.activities.MainActivity}" drawable="_4pda" />
 	<item component="ComponentInfo{ru.fourpda.client/ru.fourpda.client.MainActivity}" drawable="_4pda" />
 	<item component="ComponentInfo{ru.frisbi24/ru.frisbi24.MainActivity}" drawable="frisbi" />
