--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -9650,7 +9650,7 @@
 	<item drawable="yandex_browser" />
 	<item drawable="yandex_browser_lite" />
 	<item drawable="yandex_disk" />
-	<item drawable="yandex_eda" />
+	<item drawable="yandex_eats" />
 	<item drawable="yandex_iot" />
 	<item drawable="yandex_key" />
 	<item drawable="yandex_keyboard" />
