--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -9651,7 +9651,7 @@
 	<item drawable="yandex_browser_lite" />
 	<item drawable="yandex_disk" />
 	<item drawable="yandex_eats" />
-	<item drawable="yandex_iot" />
+	<item drawable="yandex_smart_home" />
 	<item drawable="yandex_key" />
 	<item drawable="yandex_keyboard" />
 	<item drawable="yandex_lavka" />
