--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8851,7 +8851,7 @@
 	<item component="ComponentInfo{com.yandex.browser.alpha/com.yandex.browser.YandexBrowserActivity}" drawable="yandex_browser" />
 	<item component="ComponentInfo{com.yandex.browser.lite/com.yandex.browser.lite.mainactivity.MainActivity}" drawable="yandex_browser_lite" />
 	<item component="ComponentInfo{com.yandex.browser/com.yandex.browser.YandexBrowserActivity}" drawable="yandex_browser" />
-	<item component="ComponentInfo{com.yandex.iot/ru.yandex.searchplugin.MainActivity}" drawable="yandex_iot" />
+	<item component="ComponentInfo{com.yandex.iot/ru.yandex.searchplugin.MainActivity}" drawable="yandex_smart_home" />
 	<item component="ComponentInfo{com.yandex.launcher/com.yandex.launcher.alice.AliceLauncherProxyActivity}" drawable="alice" />
 	<item component="ComponentInfo{com.yandex.launcher/com.yandex.launcher.Launcher}" drawable="alice" />
 	<item component="ComponentInfo{com.yandex.lavka/ru.yandex.lavka.common.MainActivity}" drawable="yandex_lavka" />
