--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6,6 +6,7 @@
 	<category title="New" />
 	<item drawable="yandex_translate" />
 	<item drawable="yandex_navigator" />
+	<item drawable="yandex_q" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -941,6 +942,7 @@
 	<item drawable="yandex_translate_alt_1" />
 	<item drawable="yandex_pro_alt_1" />
 	<item drawable="yandex_navigator_alt_1" />
+	<item drawable="yandex_q_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
