icon rename: Yandex.Taxi -> Yandex.Go

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11504,7 +11504,7 @@
 	<item component="ComponentInfo{ru.yandex.radio/ru.yandex.radio.app.WelcomeActivity}" drawable="yandex_radio" />
 	<item component="ComponentInfo{ru.yandex.rasp/ru.yandex.rasp.AMainActivity}" drawable="yandex_trains" />
 	<item component="ComponentInfo{ru.yandex.searchplugin/ru.yandex.searchplugin.MainActivity}" drawable="yandex" />
-	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.StartActivity}" drawable="yandex_taxi" />
+	<item component="ComponentInfo{ru.yandex.taxi/ru.yandex.taxi.activity.StartActivity}" drawable="yandex_go" />
 	<item component="ComponentInfo{ru.yandex.taximeter/ru.yandex.taximeter.LoginActivity}" drawable="yandex_pro_alt_1" />
 	<item component="ComponentInfo{ru.yandex.translate/ru.yandex.translate.ui.activities.MainActivity}" drawable="yandex_translate" />
 	<item component="ComponentInfo{ru.yandex.uber/ru.yandex.taxi.activity.StartActivity}" drawable="uber" />
