--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -9668,7 +9668,7 @@
 	<item drawable="yandex_q" />
 	<item drawable="yandex_radio" />
 	<item drawable="yandex_services" />
-	<item drawable="yandex_taxi" />
+	<item drawable="yandex_go" />
 	<item drawable="yandex_toloka" />
 	<item drawable="yandex_trains" />
 	<item drawable="yandex_translate" />
