update icon: Bookmate

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -71,6 +71,7 @@
 	<item drawable="bixby_alt_1" />
 	<item drawable="bluesky_alt_1" />
 	<item drawable="booking_com_alt_1" />
+	<item drawable="bookmate_alt_1" />
 	<item drawable="bouncer_alt_1" />
 	<item drawable="breezy_weather_alt_1" />
 	<item drawable="bromite_alt_1" />
