misc: rework Yandex.Maps* icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -7,6 +7,7 @@
 	<item drawable="yandex_translate" />
 	<item drawable="yandex_navigator" />
 	<item drawable="yandex_q" />
+	<item drawable="yandex_maps" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -939,6 +940,7 @@
 	<item drawable="xposed_installer_alt_1" />
 	<item drawable="yandex_keyboard_alt_1" />
 	<item drawable="yandex_mail_alt_1" />
+	<item drawable="yandex_maps_alt_1" />
 	<item drawable="yandex_music_alt_1" />
 	<item drawable="yandex_translate_alt_1" />
 	<item drawable="yandex_pro_alt_1" />
