--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -8,6 +8,7 @@
 	<item drawable="yandex_navigator" />
 	<item drawable="yandex_q" />
 	<item drawable="yandex_maps" />
+	<item drawable="yandex_lavka" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -946,6 +947,7 @@
 	<item drawable="yandex_pro_alt_1" />
 	<item drawable="yandex_navigator_alt_1" />
 	<item drawable="yandex_q_alt_1" />
+	<item drawable="yandex_lavka_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
