Add Fujifilm X app icon

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -72,6 +72,7 @@
 	<item drawable="yandex_translate" />
 	<item drawable="yandex_travel" />
 	<item drawable="yandex_widget" />
+	<item drawable="xapp" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -9676,6 +9677,7 @@
 	<item drawable="x_kom" />
 	<item drawable="x_twitter" />
 	<item drawable="xapk_manager" />
+	<item drawable="xapp" />
 	<item drawable="xarena" />
 	<item drawable="xash_three_d_fwgs" />
 	<item drawable="xbox" />
