--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -209,7 +209,7 @@
         name="Matt D'Angelo"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/20250090"
-        link="https://github.com/Astradus" />
+        link="https://github.com/mattdangelo" />
     <contributor
         name="maxpelic"
         contribution="Icons"
