--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13477,4 +13477,7 @@
 	<item component="ComponentInfo{org.telegram.messenger/com.exteragram.messenger.DefaultIcon}" drawable="ayugram" />
 	<item component="ComponentInfo{io.atticusc.atmosweather/io.atticusc.atmosweather.MainActivity}" drawable="atmos_weather" />
 	<item component="ComponentInfo{me.bmax.apatch/me.bmax.apatch.ui.MainActivity}" drawable="apatch" />
+	<item component="ComponentInfo{com.fujifilm.xapp/com.fujifilm.xapp.MainActivity}" drawable="xapp" />
+	<item component="ComponentInfo{au.com.ogilvy.hostplus/au.com.hostplus.ui.auth.hostactivity.AuthActivity}" drawable="hostplus" />
+	<item component="ComponentInfo{com.noctuasoftware.stellarium_free/com.stellariumlabs.stellarium.mobile.StellariumFree}" drawable="stellarium" />
 </resources>
