--- a/app/src/main/res/values/dashboard_configurations.xml
+++ b/app/src/main/res/values/dashboard_configurations.xml
@@ -15,7 +15,7 @@
         - dark
     -->
     <string name="default_theme">dark</string>
-
+    <bool name="material_you_by_default">false</bool>
 
     <!--
         CONFIG: MUZEI
