update icon: Outline (the old one moved to Alt 1)

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -418,6 +418,7 @@
 	<item drawable="organic_maps_alt_1" />
 	<item drawable="orgzly_alt_1" />
 	<item drawable="otomoto_alt_1" />
+	<item drawable="outline_alt_1" />
 	<item drawable="panera_bread_alt_1" />
 	<item drawable="passwordstore_alt_1" />
 	<item drawable="patreon_alt_1" />
@@ -6877,7 +6878,6 @@
 	<item drawable="ourocard" />
 	<item drawable="out_of_milk" />
 	<item drawable="outbank" />
-	<item drawable="outline" />
 	<item drawable="outline_kwgt" />
 	<item drawable="outlook_lite" />
 	<item drawable="overdrive" />
