misc: add missing drawable lines

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -73,6 +73,7 @@
 	<item drawable="yandex_travel" />
 	<item drawable="yandex_widget" />
 	<item drawable="xapp" />
+	<item drawable="outline" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -6878,6 +6879,7 @@
 	<item drawable="ourocard" />
 	<item drawable="out_of_milk" />
 	<item drawable="outbank" />
+	<item drawable="outline" />
 	<item drawable="outline_kwgt" />
 	<item drawable="outlook_lite" />
 	<item drawable="overdrive" />
