--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -73,6 +73,7 @@
 	<item drawable="yandex_travel" />
 	<item drawable="yandex_widget" />
 	<item drawable="xapp" />
+	<item drawable="outline" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -418,6 +419,7 @@
 	<item drawable="organic_maps_alt_1" />
 	<item drawable="orgzly_alt_1" />
 	<item drawable="otomoto_alt_1" />
+	<item drawable="outline_alt_1" />
 	<item drawable="panera_bread_alt_1" />
 	<item drawable="passwordstore_alt_1" />
 	<item drawable="patreon_alt_1" />
