update icon: Mihon (scaled version, the previous one moved to Alt 1)

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -44,6 +44,7 @@
 	<item drawable="materialyou_dynamic_island" />
 	<item drawable="mediolanum" />
 	<item drawable="mihon" />
+	<item drawable="mihon_alt_1" />
 	<item drawable="musicsearch" />
 	<item drawable="naver_chzzk" />
 	<item drawable="nfc_alarm_clock" />
@@ -398,6 +399,7 @@
 	<item drawable="microsoft_remote_desktop_alt_1" />
 	<item drawable="microsoft_teams_alt_1" />
 	<item drawable="microsoft_word_alt_1" />
+	<item drawable="mihon_alt_1" />
 	<item drawable="minecraft_alt_1" />
 	<item drawable="minecraft_alt_2" />
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
