update icon: Device Info HW (the old one moved to Alt 1)

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -19,6 +19,7 @@
 	<item drawable="cisco_anyconnect" />
 	<item drawable="clipboard_whitelist" />
 	<item drawable="credit_agricole" />
+	<item drawable="device_info_hw" />
 	<item drawable="dpd" />
 	<item drawable="edadeal" />
 	<item drawable="emerald_dialer" />
@@ -232,6 +233,7 @@
 	<item drawable="delta_alt_1" />
 	<item drawable="delta_alt_2" />
 	<item drawable="device_id_changer_alt_1" />
+	<item drawable="device_info_hw_alt_1" />
 	<item drawable="dictionary_com_alt_1" />
 	<item drawable="directv_alt_1" />
 	<item drawable="disconnect_alt" />
@@ -3661,7 +3663,7 @@
 	<item drawable="device_connect" />
 	<item drawable="device_id" />
 	<item drawable="device_id_changer" />
-	<item drawable="device_info" />
+	<item drawable="device_info_hw" />
 	<item drawable="device_info_system_and_cpu_info" />
 	<item drawable="devs_base" />
 	<item drawable="dexcom_clarity" />
