--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11305,7 +11305,7 @@
 	<item component="ComponentInfo{ru.alfabank.mobile.android/ru.alfabank.mobile.android.splash.presentation.activity.SplashActivity}" drawable="alfa_bank" />
 	<item component="ComponentInfo{ru.aliexpress.buyer/com.alibaba.aliexpresshd.home.ui.MainActivity}" drawable="ali__express" />
 	<item component="ComponentInfo{ru.altarix.mos.pgu/ru.gosuslugimsk.mpgu4.feature.splash.SplashActivity}" drawable="moscow_public_services" />
-	<item component="ComponentInfo{ru.andr7e.deviceinfohw/ru.andr7e.deviceinfohw.MainActivity}" drawable="device_info" />
+	<item component="ComponentInfo{ru.andr7e.deviceinfohw/ru.andr7e.deviceinfohw.MainActivity}" drawable="device_info_hw" />
 	<item component="ComponentInfo{ru.appsgroup.homepizza/ru.appsgroup.homepizza.presentation.view.activities.SplashActivity}" drawable="home_pizza" />
 	<item component="ComponentInfo{ru.apteki.plus/ru.apteki.plus.MainActivity}" drawable="apteki_plus" />
 	<item component="ComponentInfo{ru.aterlux.guitartuner/ru.aterlux.guitartuner.MainActivity}" drawable="guitar_pro" />
