--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -35,6 +35,7 @@
 	<item drawable="ftpclient" />
 	<item drawable="harmonia" />
 	<item drawable="i_am_from_gdansk" />
+	<item drawable="icon_pusher" />
 	<item drawable="keyguard" />
 	<item drawable="kinobaza" />
 	<item drawable="lalamove" />
@@ -319,6 +320,7 @@
 	<item drawable="hotspot_shield_alt_1" />
 	<item drawable="hsmwmobil_alt_1" />
 	<item drawable="iceraven_alt_1" />
+	<item drawable="icon_pusher_alt_1" />
 	<item drawable="ikea_home_smart_alt_1" />
 	<item drawable="image_toolbox_alt_1" />
 	<item drawable="inbrowser_alt_1" />
