--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -19,6 +19,7 @@
 	<item drawable="cisco_anyconnect" />
 	<item drawable="clipboard_whitelist" />
 	<item drawable="credit_agricole" />
+	<item drawable="device_info_hw" />
 	<item drawable="dpd" />
 	<item drawable="edadeal" />
 	<item drawable="emerald_dialer" />
@@ -34,6 +35,7 @@
 	<item drawable="ftpclient" />
 	<item drawable="harmonia" />
 	<item drawable="i_am_from_gdansk" />
+	<item drawable="icon_pusher" />
 	<item drawable="keyguard" />
 	<item drawable="kinobaza" />
 	<item drawable="lalamove" />
@@ -44,6 +46,7 @@
 	<item drawable="materialyou_dynamic_island" />
 	<item drawable="mediolanum" />
 	<item drawable="mihon" />
+	<item drawable="mihon_alt_1" />
 	<item drawable="musicsearch" />
 	<item drawable="naver_chzzk" />
 	<item drawable="nfc_alarm_clock" />
@@ -231,6 +234,7 @@
 	<item drawable="delta_alt_1" />
 	<item drawable="delta_alt_2" />
 	<item drawable="device_id_changer_alt_1" />
+	<item drawable="device_info_hw_alt_1" />
 	<item drawable="dictionary_com_alt_1" />
 	<item drawable="directv_alt_1" />
 	<item drawable="disconnect_alt" />
@@ -316,6 +320,7 @@
 	<item drawable="hotspot_shield_alt_1" />
 	<item drawable="hsmwmobil_alt_1" />
 	<item drawable="iceraven_alt_1" />
+	<item drawable="icon_pusher_alt_1" />
 	<item drawable="ikea_home_smart_alt_1" />
 	<item drawable="image_toolbox_alt_1" />
 	<item drawable="inbrowser_alt_1" />
@@ -398,6 +403,7 @@
 	<item drawable="microsoft_remote_desktop_alt_1" />
 	<item drawable="microsoft_teams_alt_1" />
 	<item drawable="microsoft_word_alt_1" />
+	<item drawable="mihon_alt_1" />
 	<item drawable="minecraft_alt_1" />
 	<item drawable="minecraft_alt_2" />
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
@@ -3659,7 +3665,7 @@
 	<item drawable="device_connect" />
 	<item drawable="device_id" />
 	<item drawable="device_id_changer" />
-	<item drawable="device_info" />
+	<item drawable="device_info_hw" />
 	<item drawable="device_info_system_and_cpu_info" />
 	<item drawable="devs_base" />
 	<item drawable="dexcom_clarity" />
