--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -116,6 +116,7 @@
 	<item drawable="yandex_travel" />
 	<item drawable="yandex_widget" />
 	<item drawable="yokai" />
+	<item drawable="rimusic" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -520,6 +521,7 @@
 	<item drawable="retro_music_player_alt_1" />
 	<item drawable="revanced_manager_alt_1" />
 	<item drawable="revue_starlight_re_live_alt_1" />
+	<item drawable="rimusic_alt_1" />
 	<item drawable="robinhood_alt_1" />
 	<item drawable="runtastic_alt_1" />
 	<item drawable="russian_e_government_alt_1" />
