misc: remove remnants and add missing entries from drawable.xml

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -92,7 +92,6 @@
 	<item drawable="yandex_lavka" />
 	<item drawable="yandex_maps" />
 	<item drawable="yandex_maps_editor" />
-	<item drawable="yandex_market_partner" />
 	<item drawable="yandex_market_partners" />
 	<item drawable="yandex_meteum" />
 	<item drawable="yandex_navigator" />
@@ -2995,6 +2994,7 @@
 	<item drawable="caju" />
 	<item drawable="cake" />
 	<item drawable="cake_browser" />
+	<item drawable="cake_monero" />
 	<item drawable="cake_wallet" />
 	<item drawable="calamari" />
 	<item drawable="calc_you" />
@@ -4046,6 +4046,7 @@
 	<item drawable="et_money" />
 	<item drawable="etchdroid" />
 	<item drawable="eternal_card_game" />
+	<item drawable="eternity" />
 	<item drawable="eternium" />
 	<item drawable="etesync" />
 	<item drawable="etisalat_cash" />
@@ -5049,6 +5050,7 @@
 	<item drawable="indeed" />
 	<item drawable="indigo" />
 	<item drawable="indmoney" />
+	<item drawable="indrive" />
 	<item drawable="indoasis" />
 	<item drawable="infektinfo_fallzahlen_inzidenz" />
 	<item drawable="infinite_design" />
@@ -5058,7 +5060,6 @@
 	<item drawable="infinity" />
 	<item drawable="infinity_army" />
 	<item drawable="infinity_for_everything" />
-	<item drawable="infinity_for_lemmy" />
 	<item drawable="infinity_orbit" />
 	<item drawable="infobus" />
 	<item drawable="infocar" />
@@ -9861,7 +9862,6 @@
 	<item drawable="yandex_maps" />
 	<item drawable="yandex_maps_editor" />
 	<item drawable="yandex_market" />
-	<item drawable="yandex_market_partner" />
 	<item drawable="yandex_market_partners" />
 	<item drawable="yandex_messenger" />
 	<item drawable="yandex_meteum" />
