new icon: Accenture

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="accenture" />
 	<item drawable="agen_pulsa_termurah" />
 	<item drawable="aircash" />
 	<item drawable="apatch" />
@@ -1831,6 +1832,7 @@
 	<item drawable="ac_odyssey_map" />
 	<item drawable="ac_unity" />
 	<item drawable="acastus_photon" />
+	<item drawable="accenture" />
 	<item drawable="access_dots" />
 	<item drawable="access_markham" />
 	<item drawable="accor_all" />
