Add Audio Technica Connect app alt icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13559,4 +13559,5 @@
 	<item component="ComponentInfo{in.org.npci.upiapp/mpacjhvlt.n}" drawable="bhim" />
 	<item component="ComponentInfo{com.kongregate.mobile.adventurecommunist.google/com.unity3d.player.UnityPlayerActivity}" drawable="adventure_communist" />
 	<item component="ComponentInfo{com.close.hook.ads/com.close.hook.ads.MainActivityLauncher}" drawable="adclose" />
+	<item component="ComponentInfo{jp.co.audiotechnica.connect/com.audiotechnica.SplashActivity}" drawable="audio_technica_connect_alt_1" />
 </resources>
