--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -54,6 +54,7 @@
 	<item drawable="atm_milano_alt_1" />
 	<item drawable="atmosphere_alt_1" />
 	<item drawable="audacy_alt_1" />
+	<item drawable="audio_technica_connect_alt_1" />
 	<item drawable="aurora_droid_alt_1" />
 	<item drawable="auxio_alt_1" />
 	<item drawable="aves_gallery_alt_1" />
