update icon: Discord

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="discord" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -127,6 +128,7 @@
 	<item drawable="dictionary_com_alt_1" />
 	<item drawable="directv_alt_1" />
 	<item drawable="disconnect_alt" />
+	<item drawable="discord_alt_1" />
 	<item drawable="doom_alt_1" />
 	<item drawable="doordash_alt_1" />
 	<item drawable="droid_ify_alt_1" />
