update icon: NekoBox

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="discord" />
+	<item drawable="nekobox" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -320,6 +321,7 @@
 	<item drawable="nagram_google" />
 	<item drawable="nagram_neon" />
 	<item drawable="neko_alt_1" />
+	<item drawable="nekobox_alt_1" />
 	<item drawable="neo_backup_alt_1" />
 	<item drawable="neo_backup_alt_2" />
 	<item drawable="neo_backup_alt_3" />
