--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,8 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="discord" />
+	<item drawable="nekobox" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -127,6 +129,7 @@
 	<item drawable="dictionary_com_alt_1" />
 	<item drawable="directv_alt_1" />
 	<item drawable="disconnect_alt" />
+	<item drawable="discord_alt_1" />
 	<item drawable="doom_alt_1" />
 	<item drawable="doordash_alt_1" />
 	<item drawable="droid_ify_alt_1" />
@@ -318,6 +321,7 @@
 	<item drawable="nagram_google" />
 	<item drawable="nagram_neon" />
 	<item drawable="neko_alt_1" />
+	<item drawable="nekobox_alt_1" />
 	<item drawable="neo_backup_alt_1" />
 	<item drawable="neo_backup_alt_2" />
 	<item drawable="neo_backup_alt_3" />
