--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -126,6 +126,11 @@
         image="https://avatars.githubusercontent.com/u/108683123"
         link="https://github.com/GitGitro" />
     <contributor
+        name="Gideon Tong"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/5449391"
+        link="https://gideontong.com" />
+    <contributor
         name="Grabster"
         contribution="Icons"
         image="https://d33wubrfki0l68.cloudfront.net/737813d0bb8f3ec708dd1b47057aa3a37b6ad008/e0adb/images/self-portrait.jpg"
