--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6,6 +6,12 @@
 	<category title="New" />
 	<item drawable="discord" />
 	<item drawable="nekobox" />
+	<item drawable="geto" />
+	<item drawable="gramophone" />
+	<item drawable="nagram_blue" />
+	<item drawable="nagram_blur_blue" />
+	<item drawable="nagram_dark_blue" />
+	<item drawable="nagram_niello" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -178,6 +184,7 @@
 	<item drawable="gardenscapes_alt_1" />
 	<item drawable="geomag_alt_1" />
 	<item drawable="geometric_weather_alt_1" />
+	<item drawable="geto_alt_1" />
 	<item drawable="gett_alt_1" />
 	<item drawable="github_alt_1" />
 	<item drawable="glitch_lab_alt_1" />
@@ -201,6 +208,7 @@
 	<item drawable="google_plus_alt_1" />
 	<item drawable="google_voice_alt_1" />
 	<item drawable="google_wallet_alt_1" />
+	<item drawable="gramophone_alt_1" />
 	<item drawable="hahabu_alt_1" />
 	<item drawable="halma_alt_1" />
 	<item drawable="hannaford_alt_1" />
@@ -316,10 +324,14 @@
 	<item drawable="mysplash_alt_1" />
 	<item drawable="mysplash_alt_2" />
 	<item drawable="n_plus_launcher_alt_1" />
+	<item drawable="nagram_blue" />
+	<item drawable="nagram_blur_blue" />
 	<item drawable="nagram_colorful" />
+	<item drawable="nagram_dark_blue" />
 	<item drawable="nagram_dark_green" />
 	<item drawable="nagram_google" />
 	<item drawable="nagram_neon" />
+	<item drawable="nagram_niello" />
 	<item drawable="neko_alt_1" />
 	<item drawable="nekobox_alt_1" />
 	<item drawable="neo_backup_alt_1" />
