--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -13560,4 +13560,8 @@
 	<item component="ComponentInfo{com.kongregate.mobile.adventurecommunist.google/com.unity3d.player.UnityPlayerActivity}" drawable="adventure_communist" />
 	<item component="ComponentInfo{com.close.hook.ads/com.close.hook.ads.MainActivityLauncher}" drawable="adclose" />
 	<item component="ComponentInfo{jp.co.audiotechnica.connect/com.audiotechnica.SplashActivity}" drawable="audio_technica_connect_alt_1" />
+	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.NielloIcon}" drawable="nagram_niello" />
+	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.BlueIcon}" drawable="nagram_blue" />
+	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.DarkBlueIcon}" drawable="nagram_dark_blue" />
+	<item component="ComponentInfo{xyz.nextalone.nagram/org.telegram.messenger.BlurBlueIcon}" drawable="nagram_blur_blue" />
 </resources>
