Add icons and compinfo

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -236,6 +236,11 @@
         image="https://avatars.githubusercontent.com/u/13665765"
         link="https://github.com/MrAngelos6" />
     <contributor
+        name="Ng Zhun Onn"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/43035773"
+        link="https://github.com/zhon12345" />
+    <contributor
         name="Otemachi"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/36190635"
