--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2289,6 +2289,7 @@
 	<item component="ComponentInfo{com.cookpad.android.activities/com.cookpad.android.activities.viper.splashscreen.SplashScreenActivity}" drawable="cookpad" />
 	<item component="ComponentInfo{com.coolapk.market/com.coolapk.market.view.main.MainActivity}" drawable="cool_market" />
 	<item component="ComponentInfo{com.coolkit/com.coolkit.MainActivity}" drawable="ewelink" />
+	<item component="ComponentInfo{com.coolkit/com.coolkit.SplashActivity}" drawable="ewelink" />
 	<item component="ComponentInfo{com.coolncoolapps.easyvoicerecorder/com.coolncoolapps.secretsoundrecorderhd.activities.MainActivity}" drawable="sound_recorder" />
 	<item component="ComponentInfo{com.coolncoolapps.easyvoicerecorder/com.coolncoolapps.secretsoundrecorderhd.activities.OneTouchRecordingActivity}" drawable="sound_recorder" />
 	<item component="ComponentInfo{com.coolpad.music/com.android.music.MusicPlayerTab}" drawable="music" />
