--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8164,6 +8164,7 @@
 	<item component="ComponentInfo{com.totaltexto.bancamovil/com.bbva.buzz.modules.startup.StartActivity}" drawable="bbva" />
 	<item component="ComponentInfo{com.touchbyte.photosync.fullfeatured/com.touchbyte.photosync.fullfeatured.MainActivity}" drawable="photosync_addon_bundle" />
 	<item component="ComponentInfo{com.touchbyte.photosync/com.touchbyte.photosync.activities.MainActivity}" drawable="photosync" />
+	<item component="ComponentInfo{com.touchbyte.photosync/com.touchbyte.photosync.activities.PhotoSyncMainActivity}" drawable="photosync" />
 	<item component="ComponentInfo{com.touchfield.kuku2048/com.touchfield.kuku2048.MainActivity}" drawable="_2048" />
 	<item component="ComponentInfo{com.touchtype.swiftkey.beta/com.touchtype.LauncherActivity}" drawable="swift__key" />
 	<item component="ComponentInfo{com.touchtype.swiftkey.beta/com.touchtype.LauncherActivityIcon}" drawable="swift__key" />
