6 new icons and 2 icon fixes (#808)
* coreirc added

* netoolpro2 icon added

* fixed photosync

* ewelink icon fixed

* aeromatic

* added b.smart icon

* bvnc icon added

* warzone requested icon added

* rework and rename Warzone icon

* rework netool.io icon, add Lite version and more compinfos

* rework bvnc

* rework coreirc

* rework bsmart

* rework aeromatic

* update vectors

---------

Co-authored-by: Antonio Fernandez <tfernandez.sc2@sgmail.com>
Co-authored-by: flameshikari <mail@hexed.pw>

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -2289,6 +2289,7 @@
 	<item component="ComponentInfo{com.cookpad.android.activities/com.cookpad.android.activities.viper.splashscreen.SplashScreenActivity}" drawable="cookpad" />
 	<item component="ComponentInfo{com.coolapk.market/com.coolapk.market.view.main.MainActivity}" drawable="cool_market" />
 	<item component="ComponentInfo{com.coolkit/com.coolkit.MainActivity}" drawable="ewelink" />
+	<item component="ComponentInfo{com.coolkit/com.coolkit.SplashActivity}" drawable="ewelink" />
 	<item component="ComponentInfo{com.coolncoolapps.easyvoicerecorder/com.coolncoolapps.secretsoundrecorderhd.activities.MainActivity}" drawable="sound_recorder" />
 	<item component="ComponentInfo{com.coolncoolapps.easyvoicerecorder/com.coolncoolapps.secretsoundrecorderhd.activities.OneTouchRecordingActivity}" drawable="sound_recorder" />
 	<item component="ComponentInfo{com.coolpad.music/com.android.music.MusicPlayerTab}" drawable="music" />
@@ -8164,6 +8165,7 @@
 	<item component="ComponentInfo{com.totaltexto.bancamovil/com.bbva.buzz.modules.startup.StartActivity}" drawable="bbva" />
 	<item component="ComponentInfo{com.touchbyte.photosync.fullfeatured/com.touchbyte.photosync.fullfeatured.MainActivity}" drawable="photosync_addon_bundle" />
 	<item component="ComponentInfo{com.touchbyte.photosync/com.touchbyte.photosync.activities.MainActivity}" drawable="photosync" />
+	<item component="ComponentInfo{com.touchbyte.photosync/com.touchbyte.photosync.activities.PhotoSyncMainActivity}" drawable="photosync" />
 	<item component="ComponentInfo{com.touchfield.kuku2048/com.touchfield.kuku2048.MainActivity}" drawable="_2048" />
 	<item component="ComponentInfo{com.touchtype.swiftkey.beta/com.touchtype.LauncherActivity}" drawable="swift__key" />
 	<item component="ComponentInfo{com.touchtype.swiftkey.beta/com.touchtype.LauncherActivityIcon}" drawable="swift__key" />
