--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -7,18 +7,38 @@
         link="https://leifs.website" />
     <contributor
         name="flameshikari"
-        contribution="Project Maintainer"
+        contribution="Maintainer"
         image="https://avatars.githubusercontent.com/u/17804422"
         link="https://hexed.pw" />
+    <contributor
+        name="Gitro"
+        contribution="Maintainer"
+        image="https://avatars.githubusercontent.com/u/108683123"
+        link="https://github.com/GitGitro" />
+    <contributor
+        name="maxtron95"
+        contribution="Maintainer"
+        image="https://avatars.githubusercontent.com/u/53346722"
+        link="https://github.com/maxtron95" />
+    <contributor
+        name="wokija (J. P. Gravel)"
+        contribution="Maintainer"
+        image="https://avatars.githubusercontent.com/u/14982166"
+        link="https://github.com/wokija" />
     <contributor
         name="Onno van den Dungen"
         contribution="FOSS Implementation"
         image="https://avatars.githubusercontent.com/u/31142286"
         link="https://onnno.nl" />
     <contributor
+        name="Icons8"
+        contribution="Vector Graphics"
+        image="https://avatars.githubusercontent.com/u/6615749"
+        link="https://icons8.com" />
+    <contributor
         name="SVG Repo"
         contribution="Vector Graphics"
-        image="https://icon-icons.com/downloadimage.php?id=170689&amp;root=2699/PNG/128/&amp;file=svgrepo_logo_icon_170689.png"
+        image="https://cdn.icon-icons.com/icons2/2699/PNG/64/svgrepo_logo_icon_170689.png"
         link="https://svgrepo.com" />
     <contributor
         name="Sam Beckman"
@@ -71,11 +91,6 @@
         image="https://avatars.githubusercontent.com/u/73502484"
         link="https://github.com/chico34" />
     <contributor
-        name="creepertron95"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/53346722"
-        link="https://github.com/creepertron95" />
-    <contributor
         name="Daniel Shtein"
         contribution="Icons"
         image="https://i.imgur.com/xrsJZKr.png"
@@ -121,11 +136,6 @@
         image="https://avatars.githubusercontent.com/u/24932514"
         link="https://github.com/iamflorencejay" />
     <contributor
-        name="Gitro"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/108683123"
-        link="https://github.com/GitGitro" />
-    <contributor
         name="Gideon Tong"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/5449391"
@@ -135,6 +145,11 @@
         contribution="Icons"
         image="https://d33wubrfki0l68.cloudfront.net/737813d0bb8f3ec708dd1b47057aa3a37b6ad008/e0adb/images/self-portrait.jpg"
         link="https://grabster.tv" />
+    <contributor
+        name="Haley Wakamatsu"
+        contribution="Icons"
+        image="https://2gd4.me/resource/profilepic.png"
+        link="https://2gd4.me" />
     <contributor
         name="Jaebirds"
         contribution="Icons"
@@ -311,11 +326,6 @@
         image="https://avatars.githubusercontent.com/u/64437199"
         link="https://github.com/winghongchan" />
     <contributor
-        name="wokija (J. P. Gravel)"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/14982166"
-        link="https://github.com/wokija" />
-    <contributor
         name="Xavier Ang"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/52783697"
@@ -340,5 +350,4 @@
         contribution="Testing"
         image=""
         link="" />
-
 </resources>
