--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,8 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="spmp" />
+	<item drawable="sherpa_tts" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -808,6 +810,7 @@
 	<item drawable="sonic_the_hedgehog_2_alt_1" />
 	<item drawable="sonic_the_hedgehog_alt_1" />
 	<item drawable="sony_videography_alt_1" />
+	<item drawable="spmp_alt_1" />
 	<item drawable="spotify_alt_1" />
 	<item drawable="spotube_alt_1" />
 	<item drawable="stan_alt_1" />
