Added icons: app_lounge, asn_bank, berichtenbox, coinmerce, declaree, declaree1, nommo_pro, oura, spendcatcher

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -350,4 +350,9 @@
         contribution="Testing"
         image=""
         link="" />
+    <contributor
+        name="daan banaan 🍌"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/30617721"
+        link="https://github.com/drygoatair" />
 </resources>
