--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -33,12 +33,12 @@
     <contributor
         name="Icons8"
         contribution="Vector Graphics"
-        image="https://avatars.githubusercontent.com/u/6615749"
+        image="https://raw.githubusercontent.com/Delta-Icons/android/master/.github/images/contributors/icon8.png"
         link="https://icons8.com" />
     <contributor
         name="SVG Repo"
         contribution="Vector Graphics"
-        image="https://cdn.icon-icons.com/icons2/2699/PNG/64/svgrepo_logo_icon_170689.png"
+        image="https://raw.githubusercontent.com/Delta-Icons/android/master/.github/images/contributors/svgrepo.png"
         link="https://svgrepo.com" />
     <contributor
         name="Sam Beckman"
@@ -90,6 +90,11 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/73502484"
         link="https://github.com/chico34" />
+    <contributor
+        name="daan banaan 🍌"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/30617721"
+        link="https://github.com/drygoatair" />
     <contributor
         name="Daniel Shtein"
         contribution="Icons"
@@ -143,7 +148,7 @@
     <contributor
         name="Grabster"
         contribution="Icons"
-        image="https://d33wubrfki0l68.cloudfront.net/737813d0bb8f3ec708dd1b47057aa3a37b6ad008/e0adb/images/self-portrait.jpg"
+        image="https://avatars.githubusercontent.com/u/49114212"
         link="https://grabster.tv" />
     <contributor
         name="Haley Wakamatsu"
@@ -350,9 +355,4 @@
         contribution="Testing"
         image=""
         link="" />
-    <contributor
-        name="daan banaan 🍌"
-        contribution="Icons"
-        image="https://avatars.githubusercontent.com/u/30617721"
-        link="https://github.com/drygoatair" />
 </resources>
