rename Gosuslugi icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -231,6 +231,7 @@
 	<item drawable="google_plus_alt_1" />
 	<item drawable="google_voice_alt_1" />
 	<item drawable="google_wallet_alt_1" />
+	<item drawable="gosuslugi_alt_1" />
 	<item drawable="gramophone_alt_1" />
 	<item drawable="hahabu_alt_1" />
 	<item drawable="halma_alt_1" />
@@ -453,7 +454,6 @@
 	<item drawable="rimusic_alt_1" />
 	<item drawable="robinhood_alt_1" />
 	<item drawable="runtastic_alt_1" />
-	<item drawable="russian_e_government_alt_1" />
 	<item drawable="safespace_alt_1" />
 	<item drawable="sagernet_alt_1" />
 	<item drawable="samsung_ar_zone_alt_1" />
@@ -4617,6 +4617,8 @@
 	<item drawable="gospel_library" />
 	<item drawable="gostop_play" />
 	<item drawable="gosund" />
+	<item drawable="gosuslugi_culture" />
+	<item drawable="gosuslugi" />
 	<item drawable="gotify" />
 	<item drawable="gotube" />
 	<item drawable="gotyme" />
@@ -7832,8 +7834,6 @@
 	<item drawable="rush_rally_3" />
 	<item drawable="rush_royale" />
 	<item drawable="ruslin" />
-	<item drawable="russian_culture" />
-	<item drawable="russian_e_government" />
 	<item drawable="russian_post" />
 	<item drawable="russian_railways" />
 	<item drawable="rust_plus" />
