--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11359,7 +11359,7 @@
 	<item component="ComponentInfo{ru.getpharma.eapteka/ru.getpharma.eapteka.splashscreen.SplashActivity}" drawable="sber_eapteka" />
 	<item component="ComponentInfo{ru.gismeteo.gismeteo/ru.gismeteo.gismeteo.ui.ActMain}" drawable="weather" />
 	<item component="ComponentInfo{ru.godville.android/ru.godville.android4.base.activities.LaunchActivity}" drawable="godville" />
-	<item component="ComponentInfo{ru.gosuslugi.culture/ru.notamedia.pushka.pushka.MainActivity}" drawable="russian_culture" />
+	<item component="ComponentInfo{ru.gosuslugi.culture/ru.notamedia.pushka.pushka.MainActivity}" drawable="gosuslugi_culture" />
 	<item component="ComponentInfo{ru.habrahabr/ru.habrahabr.ui.activity.SplashActivity}" drawable="techmedia" />
 	<item component="ComponentInfo{ru.hh.android/ru.hh.android.feature.root.ApplicantRootActivity}" drawable="hh" />
 	<item component="ComponentInfo{ru.HkSqAoGi.hiFJHqBal/ru.HkSqAoGi.hiFJHqBal.MainActivityOriginal}" drawable="lucky_patcher" />
@@ -11450,9 +11450,9 @@
 	<item component="ComponentInfo{ru.ria.ria/ru.rian.reader5.activity.SplashActivity}" drawable="ria_news" />
 	<item component="ComponentInfo{ru.rocketbank.r2d2/ru.rocketbank.r2d2.StartupActivity}" drawable="rocketbank" />
 	<item component="ComponentInfo{ru.rosbank.android.beta/ru.rosbank.mbdg.android.AuthActivity}" drawable="rosbank" />
-	<item component="ComponentInfo{ru.rostel/rt.gosuslugi.client.droid.views.SplashScreen}" drawable="russian_e_government" />
-	<item component="ComponentInfo{ru.rostel/ru.minsvyaz.coreproject.MainActivity}" drawable="russian_e_government" />
-	<item component="ComponentInfo{ru.rostel/ru.minsvyaz.coreproject.SplashScreenActivity}" drawable="russian_e_government" />
+	<item component="ComponentInfo{ru.rostel/rt.gosuslugi.client.droid.views.SplashScreen}" drawable="gosuslugi" />
+	<item component="ComponentInfo{ru.rostel/ru.minsvyaz.coreproject.MainActivity}" drawable="gosuslugi" />
+	<item component="ComponentInfo{ru.rostel/ru.minsvyaz.coreproject.SplashScreenActivity}" drawable="gosuslugi" />
 	<item component="ComponentInfo{ru.rzd.pass/ru.rzd.app.common.gui.SplashActivity}" drawable="russian_railways" />
 	<item component="ComponentInfo{ru.saber_nyan.ddlc/org.renpy.android.PythonSDLActivity}" drawable="doki_doki_literature_club" />
 	<item component="ComponentInfo{ru.sbcs.store/ru.sbcs.store.MainActivity}" drawable="samokat" />
@@ -13706,7 +13706,6 @@
 	<item component="ComponentInfo{peterfajdiga.fastdraw/peterfajdiga.fastdraw.activities.SettingsActivity}" drawable="fast_draw_preferences" />
 	<item component="ComponentInfo{peterfajdiga.fastdraw/peterfajdiga.fastdraw.activities.MainActivity}" drawable="fast_draw" />
 	<item component="ComponentInfo{com.ebay.kleinanzeigen/com.ebay.kleinanzeigen.ui.main.MainActivity}" drawable="ebay_kleinanzeigen" />
-	<item component="ComponentInfo{com.mobilexpense.declaree/com.mobilexpense.declaree.ui.MainActivity}" drawable="declaree_mobileexpense" />
 	<item component="ComponentInfo{com.declaree.declaree/com.declaree.declaree.activity.SplashActivity}" drawable="declaree" />
 	<item component="ComponentInfo{co.aureolin.coreirc.lite/co.aureolin.coreirc.lite.MainActivity}" drawable="coreirc" />
 	<item component="ComponentInfo{io.coinmerce.app/io.coinmerce.coinmerce.MainActivity}" drawable="coinmerce" />
